# python-backend-serverless

./: README.md
.github/workflows/: restapi.yml  scheduler.yml  websocket.yml  worker.yml
restapi/: app.py  package.json  pyproject.toml  requirements.txt  serverless.yml  sqs.py
restapi/tests/: test_root.py
scheduler/: app.py  pyproject.toml
scheduler/.chalice/: config.json
websocket/: app.py  pyproject.toml  requirements.txt
websocket/chalicelib/: __init__.py
worker/: app.py  pyproject.toml  requirements.txt
worker/.chalice/: config.json
